--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       gtag('config', 'G-XBV6Y9XJHS');
     </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7452963355322339"
+     crossorigin="anonymous"></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fortnite GeoGuessr - Play Online Free</title>
